# rentals-ai-voice-agent

./: .gitignore  README.md  cspell.json  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  twenty-crm.md
agent/: .gitignore  README.md  bot.py  crm-api-scpec.json  pyproject.toml  test_crm_client.py  test_s3.py
agent/application/: flows.py
agent/crm_api_client/: README.md  pyproject.toml
agent/crm_api_client/crm_manager_client/: __init__.py
agent/crm_api_client/crm_manager_client/api/accommodations/: accommodations_controller_confirm_settlement.py  accommodations_controller_create_booking.py
agent/crm_api_client/crm_manager_client/api/clients/: clients_controller_get_clients.py  (+7 more)
agent/crm_api_client/crm_manager_client/models/: __init__.py  amenity.py  available_date_spans_dto.py  available_date_spans_dto_rental_id.py  book_rental_dto.py  booking_result_dto.py  client_accommodation_dto.py  client_dto.py  client_dto_id.py  client_dto_preferred_language.py  clients_controller_find_client_by_phone_response_200.py  clients_controller_get_client_by_id_response_200.py  compact_rental_dto.py  compact_rental_dto_id.py  create_client_dto.py  date_day_dto.py  days_span_dto.py  location.py  price.py  rental_emergency_details_dto.py  rental_settlement_details_dto.py  update_client_name_dto.py  update_client_preferences_dto.py  update_client_preferred_language_dto.py  update_client_preferred_language_dto_language.py
agent/domain/: __init__.py  call_session.py  conversation_context.py  mock_call_session.py
agent/domain/events/: call_completed_event.py
(+143 files in other folders)
