[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Artandrey",email = "artandrey7777@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pipecat-ai[cartesia,deepgram,openai,silero] (>=0.0.65,<0.0.66)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "textual (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.24.3"

